--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,8 +16,9 @@ a {
     opacity: 0.9;
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.2s;
-    padding: 4px 0 ;
+    padding: 2px 6px;
 }
+
 
 a:hover,
 a:active {
@@ -35,12 +36,12 @@ header {
     top:0;
     left: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
+    padding: 20px 20px;
 }
 header img{
-    width: 300px;
+    width: 200px;
     
 }
 header nav{
@@ -48,10 +49,11 @@ header nav{
 }
 header li a{
     color: #fff;
-    font-size: 2.4rem;
+    font-size: 1.8rem;
 }
+
 header li{
-    margin: 0 20px;
+    margin: 0 40px;
 }
 
 header li:first-child{
@@ -60,30 +62,33 @@ header li:first-child{
 header li:last-child{
     margin-right: 0;
 }
-@media (max-width: 14100px){
+@media (max-width: 14300px){
     header {
         flex-direction: column;
     }
     header img {
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 }
 
 /* container-img */
 container {
+    height: 100vh;
     width: 100%;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .container-img {
     background-image: url("../img/home/meat-burger-tomato-onion-beans-walnuts-side-view\ 1.jpg");
-    background-size: cover;
-    min-height: 90vh;
+    background-size: 100%;
+    background-repeat: no-repeat;
     color: #fff;
-    top:10px;
     display: flex;
-    min-width: 600px;
-    min-height: 1140px;
+    height: 100vh;
+    background-attachment: fixed;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -91,31 +96,24 @@ container {
 }
 
 .container-img p {
-    font-size: 2.6rem;
+    background-size: 100%;
+    font-size: 2.8rem;
+    justify-content: center;
+    align-self: auto;
     color: #fff;
-    min-width: 600px;
-    padding: 40px;
+    min-width: 200px;
+    padding: 20px;
     background-color: #000;
     opacity: 90%
 }
-@media (max-width: 600px){
-    .container-img {
-        flex-direction: column;
-        margin: 0;
-    }
-    .container-img p {
-        font-size: 1.6rem;
-        margin-bottom: 20px;
-    }
 
-}
 /* footer */
 
 footer {
     background-color: #000;
-    padding: 60px;
+    padding: 20px;
     padding-top: 20px;
-    padding-bottom: 120px;
+    padding-bottom: 40px;
     font-size: 2.4rem;
 }
 
@@ -157,7 +155,7 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 3.2rem;
+    font-size: 2.0rem;
 }
 
 .logo-facebook,
@@ -186,8 +184,8 @@ footer {
 footer p {
     color: #fff;
     text-align: center;
-    margin-top: 100px;
-    font-size: 1.8rem;
+    margin-top: 60px;
+    font-size: 1.4rem;
 }
 
 @media (max-width: 600px){
@@ -195,6 +193,6 @@ footer p {
         flex-direction: column;
     }
     header p {
-        margin-bottom: 20px;
+        margin-bottom: 0px;
     }
 }
