--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -6,7 +6,6 @@
     font-family: 'Modern Antiqua', cursive;
 }
 
-
 nav, ul{
     list-style: none;
 }
@@ -17,15 +16,16 @@ a {
     opacity: 0.9;
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.2s;
-    padding: 4px 0 ;
+    padding: 2px 6px;
 }
+
 
 a:hover,
 a:active {
     opacity: 1;
     color: #8257E6; 
     border-bottom: 4px solid #8257E6; 
-} 
+}
 
 /* Header */
 
@@ -36,12 +36,12 @@ header {
     top:0;
     left: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
+    padding: 20px 20px;
 }
 header img{
-    width: 300px;
+    width: 200px;
     
 }
 header nav{
@@ -49,10 +49,11 @@ header nav{
 }
 header li a{
     color: #fff;
-    font-size: 2.4rem;
+    font-size: 1.8rem;
 }
+
 header li{
-    margin: 0 20px;
+    margin: 0 40px;
 }
 
 header li:first-child{
@@ -61,12 +62,12 @@ header li:first-child{
 header li:last-child{
     margin-right: 0;
 }
-@media (max-width: 14100px){
+@media (max-width: 14300px){
     header {
         flex-direction: column;
     }
     header img {
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 } 
 
@@ -75,15 +76,41 @@ header li:last-child{
 body{
     display: grid;
     place-items: center;
-    height: 150vh;
+    height: 100vh;
+}
+
+section {
+    margin-top: 80px;
+    height: 100vh;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 30px;
+    color: #000;
+    font-size: 300%;
+    word-spacing: 4px;
+    letter-spacing: 1px;
 }
  
 #items-wrapper {
-    width: 100vh;
+    width: 100vh; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.items-container{
+    height: 100px;
 }
 #items {
     display: flex;
     overflow-x: auto; /* habilita scroll*/ 
+    align-content: space-around;
     scroll-snap-type: x mandatory; 
     -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth;
@@ -91,6 +118,7 @@ body{
 }
 .item {
     flex: none;
+    text-align: center;
 
     width: 100%;
     height: 400px;
@@ -103,4 +131,95 @@ body{
 img {
     width: 100%;
     height: 100%;
+}
+
+/* footer */
+
+footer {
+    background-color: #000;
+    padding: 20px;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    font-size: 2.4rem;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #fff;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #8257E6;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 2.0rem;
+}
+
+.logo-facebook,
+.logo-googleplus,
+.logo-twitter,
+.logo-instagram {
+    transition: color 0.2s;
+}
+
+.logo-facebook:hover {
+    color: #3b5998;
+}
+
+.logo-twitter:hover {
+    color: #00aced;
+}
+
+.logo-googleplus:hover {
+    color: #dd4b39;
+}
+
+.logo-instagram:hover {
+    color: #517fa4;
+}
+
+footer p {
+    color: #fff;
+    text-align: center;
+    margin-top: 60px;
+    font-size: 1.4rem;
+}
+
+@media (max-width: 600px){
+    footer {
+        flex-direction: column;
+    }
+    header p {
+        margin-bottom: 0px;
+    }
 }
