--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,11 +32,12 @@ a:active {
 header {
     background-color: #000;
     width: 100%;
+    min-width: 100vh;
     position: absolute;
     top:0;
     left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 20px 20px;
 }
@@ -62,12 +63,64 @@ header li:first-child{
 header li:last-child{
     margin-right: 0;
 }
+header .nav-menu{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+header .item-nav{
+    margin: 20px;
+}
+
 @media (max-width: 14300px){
     header {
         flex-direction: column;
     }
     header img {
         margin-bottom: 30px;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .menu a {
+        font-size: 16px;
+        
+    }
+}
+
+@media only screen and (max-width: 959px) {
+    .menu a {
+        font-size: 12px;
+        padding: 24px;
+    }
+}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .menu a {
+        font-size: 12px;
+    }
+}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .menu a {
+        font-size: 12px;
+    }
+}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
+    .menu a {
+        font-size: 7px;
     }
 }
 
@@ -79,14 +132,16 @@ container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .container-img {
     background-image: url("../img/home/meat-burger-tomato-onion-beans-walnuts-side-view\ 1.jpg");
-    background-size: 100%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     color: #fff;
     display: flex;
+    width: 100%;
     height: 100vh;
     background-attachment: fixed;
     justify-content: center;
@@ -96,15 +151,58 @@ container {
 }
 
 .container-img p {
-    background-size: 100%;
-    font-size: 2.8rem;
-    justify-content: center;
+    background-size: 50%;
+    font-size: 2.6rem;
     align-self: auto;
     color: #fff;
-    min-width: 200px;
-    padding: 20px;
+    width: 90%;
+    min-height: 20%;
+    padding: 40px;
     background-color: #000;
     opacity: 90%
+}
+@media only screen and (max-width: 1700px) {
+    .container-img p{
+        font-size: 1.8rem;
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    .container-img p{
+        font-size: 1.6rem;
+        padding-top: 0;
+    }
+}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .container-img p{
+        font-size: 1.6rem;
+    }
+}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    .container-img p{
+        font-size: 1.4rem;
+    }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .container-img p{
+        font-size: 1.2rem;
+        padding-top: 0;
+    }
+}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 400px) {
+    .container-img p{
+        font-size: 0.8rem;
+        padding-top: 0;
+    }
 }
 
 /* footer */
@@ -112,7 +210,7 @@ container {
 footer {
     background-color: #000;
     padding: 20px;
-    padding-top: 20px;
+    padding-top: 20px 10px;
     padding-bottom: 40px;
     font-size: 2.4rem;
 }
