--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -5,10 +5,15 @@
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
-
+body{
+    display: grid;
+    place-items: center;
+}
 nav, ul{
     list-style: none;
 }
+
+
 
 a {
     text-decoration: none;
@@ -19,7 +24,6 @@ a {
     padding: 2px 6px;
 }
 
-
 a:hover,
 a:active {
     opacity: 1;
@@ -28,15 +32,15 @@ a:active {
 }
 
 /* Header */
-
 header {
     background-color: #000;
     width: 100%;
+    min-width: 100vh;
     position: absolute;
     top:0;
     left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 20px 20px;
 }
@@ -49,11 +53,13 @@ header nav{
 }
 header li a{
     color: #fff;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+    
 }
 
 header li{
-    margin: 0 40px;
+    margin: 0;
+    
 }
 
 header li:first-child{
@@ -62,54 +68,105 @@ header li:first-child{
 header li:last-child{
     margin-right: 0;
 }
+header .menu{
+    display: flex;
+    flex-grow: 1;
+}
+header .nav-menu{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+header .item-nav{
+    margin: 20px;
+}
+
 @media (max-width: 14300px){
     header {
         flex-direction: column;
     }
     header img {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
-} 
-
-/* Selection items-wrapper */
-
-body{
-    display: grid;
-    place-items: center;
-    height: 100vh;
+    header .item-nav{
+        font-size: 1.8px;
+    }
+}
+@media only screen and (max-width: 1410px) and (max-width: 1255px) {
+    .menu a {
+        font-size: 18px;
+    }
+}
+@media only screen and (max-width: 1250x) and (max-width: 1000px) {
+    .menu a {
+        font-size: 16px;
+    }
+    header li{
+        justify-content: space-around;
+    }
+}
+@media only screen and (max-width: 846px) and (max-width: 508px){
+    .menu a {
+        font-size: 14px;
+    }
 }
 
-section {
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .menu a {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .menu a {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .menu a {
+        font-size: 12px;
+    }
+}
+@media only screen and (max-width: 479px) {
+    .menu a {
+        font-size: 7px;
+    }
+}
+
+
+/* Selection items-wrapper */
+section{
+    max-width: 100%;
+    margin-top: 250px;
+    
+}
+
+section .tems-img{
     margin-top: 80px;
     height: 100vh;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    flex-direction: row;
 }
 
 h1 {
-    margin-top: 0;
-    margin-bottom: 30px;
     color: #000;
-    font-size: 300%;
-    word-spacing: 4px;
-    letter-spacing: 1px;
+    font-size: 3.2rem;
+    padding-bottom: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
  
-#items-wrapper {
-    width: 100vh; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.items-container{
-    height: 100px;
-}
+
 #items {
     display: flex;
-    overflow-x: auto; /* habilita scroll*/ 
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 30%;
+    height: 300px;
+    overflow-x: auto; 
     align-content: space-around;
     scroll-snap-type: x mandatory; 
     -webkit-overflow-scrolling: touch;
@@ -121,16 +178,55 @@ h1 {
     text-align: center;
 
     width: 100%;
-    height: 400px;
+    height: auto;
 
     object-fit: cover;
     scroll-snap-align: start;
     pointer-events: none;
 }
-
+.item img{
+    width: 100%;
+    height: 100%;
+}
 img {
     width: 100%;
     height: 100%;
+}
+
+
+/* Galeria  */
+
+.items-galeria{
+    width: 100%;
+    max-width: 100%;
+    margin-top: 90px;
+    margin-bottom: 50px;
+    flex-direction: row;
+}
+
+.items-show{
+    width: 100%;
+    max-width: 100%;
+    
+}
+
+.items-show li {
+    display: inline-block;
+    width: 22%;
+}
+
+.images{
+    width: 100%;
+    max-width: 100%;
+}
+
+.images img{
+    width: 100%;
+    max-width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    margin-left: 100px;
 }
 
 /* footer */
