--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -50,7 +50,8 @@ header nav{
 }
 header li a{
     color: #fff;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+    
 }
 
 header li{
@@ -62,6 +63,10 @@ header li:first-child{
 }
 header li:last-child{
     margin-right: 0;
+}
+header .menu{
+    display: flex;
+    flex-grow: 1;
 }
 header .nav-menu{
     display: flex;
@@ -78,57 +83,58 @@ header .item-nav{
         flex-direction: column;
     }
     header img {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
+    }
+    header .item-nav{
+        font-size: 1.4rem;
     }
 }
-
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1410px) and (max-width: 1255px) {
     .menu a {
-        font-size: 16px;
-        
+        font-size: 1.6rem;
     }
 }
-
-@media only screen and (max-width: 959px) {
+@media only screen and (max-width: 1250x) and (max-width: 1000px) {
     .menu a {
-        font-size: 12px;
-        padding: 24px;
+        font-size: 1.4rem;
+    }
+}
+@media only screen and (max-width: 789px) {
+    .menu a {
+        font-size: 1.2rem;
     }
 }
 
-/* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
     .menu a {
-        font-size: 12px;
+        font-size: 1.0rem;
     }
 }
 
-/* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
     .menu a {
         font-size: 16px;
     }
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     .menu a {
         font-size: 12px;
     }
 }
-
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
     .menu a {
         font-size: 7px;
     }
 }
 
+
 /* container-img */
 container {
     height: 100vh;
     width: 100%;
-    display: flex;
+    max-width: 100%;
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -146,8 +152,7 @@ container {
     background-attachment: fixed;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    text-align: center;
+    text-align: justify;
 }
 
 .container-img p {
@@ -175,33 +180,28 @@ container {
     }
 }
 
-/* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
     .container-img p{
         font-size: 1.6rem;
+        
     }
 }
-
-/* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
     .container-img p{
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     .container-img p{
         font-size: 1.2rem;
-        padding-top: 0;
     }
 }
 
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 400px) {
     .container-img p{
-        font-size: 0.8rem;
-        padding-top: 0;
+        font-size: 1.0rem;
+
     }
 }
 
