--- a/resources/css/promo.css
+++ b/resources/css/promo.css
@@ -129,16 +129,40 @@ header .item-nav{
 }
 
 /* section  Image */
-container {
-    height: 100vh;
-    width: 100%;
-    max-width: 100%;
-    display: block;
-    flex-direction: column;
+
+figure {
+    width: 100vh;
+    opacity: 80%;
+    display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
 }
 
+figure img{
+    width: 100%;
+    padding-left: 40px;
+    margin-right: 40px;
+}
+
+.background-section {
+    min-width: 100%;
+    margin-top: 300px;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    color: #000;
+    font-size: 3.2rem;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.transition{
+    background-color: #000;
+    width: 80%; 
+    height: 300px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
 
 
