--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,59 +130,58 @@ header .item-nav{
 
 
 /* container-img */
-container {
-    height: 100vh;
-    width: 100%;
-    max-width: 100%;
+section {
     display: block;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    padding-top: 10%;
 }
-
 .container-img {
     background-image: url("../img/home/meat-burger-tomato-onion-beans-walnuts-side-view\ 1.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     color: #fff;
     display: flex;
-    width: 100%;
+    width: 1640px;
+    min-height: auto;
+    min-width: 100%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: auto;
     height: 100vh;
-    background-attachment: fixed;
     justify-content: center;
     align-items: center;
-    text-align: justify;
 }
 
-.container-img p {
-    background-size: 50%;
+.container-img div {
     font-size: 2.6rem;
-    align-self: auto;
     color: #fff;
-    width: 90%;
-    min-height: 20%;
-    padding: 40px;
+    width: 100%;    
+    height: 15%;
+    min-height: 25%;
+    padding-left: 20px;
+    padding-right: 10px;
+    padding-top: 20px;
+    align-items: center;
     background-color: #000;
     opacity: 90%
 }
 @media only screen and (max-width: 1700px) {
-    .container-img p{
-        font-size: 1.8rem;
+    .container-img div{
+        font-size: 1.6rem;
         display: block;
+        align-self: center;
     }
 }
 
 @media only screen and (max-width: 1400px) {
-    .container-img p{
-        font-size: 1.6rem;
+    .container-img div{
+        font-size: 1.4rem;
         padding-top: 0;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-    .container-img p{
-        font-size: 1.6rem;
+    .container-img div{
+        font-size: 1.4rem;
         
     }
 }
@@ -200,7 +199,7 @@ container {
 
 @media only screen and (max-width: 400px) {
     .container-img p{
-        font-size: 1.0rem;
+        font-size: 1.2rem;
 
     }
 }
