--- a/resources/css/promo.css
+++ b/resources/css/promo.css
@@ -130,7 +130,7 @@ header .item-nav{
 
 /* section  Image */
 
-figure {
+/* figure {
     width: 100vh;
     opacity: 80%;
     display: flex;
@@ -152,17 +152,88 @@ figure img{
 
 h1 {
     color: #000;
-    font-size: 3.2rem;
-    padding-bottom: 10px;
+    font-size: 3.6rem;
+    padding-bottom: 20px;
     text-align: center;
+    margin-top: 20px;
 }
 
 .transition{
     background-color: #000;
-    width: 80%; 
+    width: 90%; 
+    height: 300px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+} */
+
+article {
+    width: 100%;
+}
+
+article .transition-section{
+    display: flex;
+    justify-content: center;
+    
+} 
+
+.transition-section{
+    background-color: aqua;
+    min-width: 100vh;
+    margin-top: 250px;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    color: #000;
+    font-size: 3.2rem;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.transition{
+    background-image:url('../img/promo/1.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%; 
     height: 300px;
     margin-top: 20px;
     margin-bottom: 30px;
 }
 
+section {
+    background-image: url('../img/promo/promobackground.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 100vh;
+    min-width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    opacity: 90%;
+    display:  flex;
+    flex-direction: column;
+}
+
+h2{
+    width: 100%;
+    font-size: 1.6rem;
+    color: #fff;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.promo-details{
+    font-size: 2.2rem;
+    width: 100%;
+    height: 200px;
+    background-color: #000;
+    color: #fff;
+    opacity: 80%;
+    
+}
 
