--- a/resources/css/promo.css
+++ b/resources/css/promo.css
@@ -210,6 +210,7 @@ section {
     background-repeat: no-repeat;
     width: 100vh;
     min-width: 100%;
+    height: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
     opacity: 90%;
@@ -219,7 +220,7 @@ section {
 
 h2{
     width: 100%;
-    font-size: 1.6rem;
+    font-size: 2.2rem;
     color: #fff;
     margin-top: 20px;
     padding-bottom: 10px;
@@ -228,12 +229,18 @@ h2{
 }
 
 .promo-details{
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     width: 100%;
     height: 200px;
     background-color: #000;
     color: #fff;
     opacity: 80%;
     
+}
+
+.promo-details p{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
 
