--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -152,7 +152,7 @@ section .tems-img{
 
 h1 {
     color: #000;
-    font-size: 3.8rem;
+    font-size: 3.2rem;
     padding-bottom: 20px;
     text-align: center;
     margin-top: 20px;
@@ -164,8 +164,9 @@ h1 {
     margin: 0 auto;
     margin-top: 20px;
     width: 100%;
-    max-width: 30%;
-    height: 300px;
+    max-width: 50%;
+    height: 50vh;
+    min-height: 100%;
     overflow-x: auto; 
     align-content: space-around;
     scroll-snap-type: x mandatory; 
@@ -189,19 +190,26 @@ h1 {
     height: 100%;
 }
 img {
-    width: 100%;
-    height: 100%;
+   padding: 10px;
+}
+
+figure{
+    display: flex;
+    justify-content: center;
+    align-self: center;
 }
 
 
 /* Galeria  */
 
 .items-galeria{
-    width: 100%;
-    max-width: 100%;
+    width: 100vh;
+    min-width: 100%;
     margin-top: 90px;
     margin-bottom: 50px;
-    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .items-show{
@@ -311,11 +319,14 @@ footer p {
     font-size: 1.4rem;
 }
 
-@media (max-width: 600px){
+.promo-footer {
+    width: 100vh;
+    min-width: 100%;
+}
+
+@media only screen and (max-width: 800px) and (max-width: 600px){
     footer {
         flex-direction: column;
-    }
-    header p {
-        margin-bottom: 0px;
+        font-size: 1.2rem;
     }
 }
