--- a/resources/css/promo.css
+++ b/resources/css/promo.css
@@ -206,14 +206,13 @@ h1 {
 
 section {
     background-image: url('../img/promo/promobackground.jpg');
-    background-size: 100% 100%;
+    background-size: 100% 100%; 
     background-repeat: no-repeat;
     width: 100vh;
     min-width: 100%;
-    height: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    height: auto;
     opacity: 90%;
+    /* margin-bottom: 50px; */
     display:  flex;
     flex-direction: column;
 }
@@ -223,7 +222,7 @@ h2{
     font-size: 2.2rem;
     color: #fff;
     margin-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
     display: flex;
     justify-content: center;
 }
@@ -235,12 +234,121 @@ h2{
     background-color: #000;
     color: #fff;
     opacity: 80%;
-    
+    margin-bottom: 50px;
 }
 
 .promo-details p{
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     flex-direction: row;
 }
 
+@media only screen and (max-width: 800px) and (max-width: 600px) {
+    .promo-details {
+        height: 100px;
+    }
+    
+    .promo-details p {
+        font-size: 1.2rem;
+    }
+    .promo-details h2 {
+        font-size: 1.6rem;
+    }
+}
+
+/* footer */
+footer {
+    background-color: #000;
+    padding: 20px;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    font-size: 2.4rem;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #fff;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #8257E6;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 2.0rem;
+}
+
+.logo-facebook,
+.logo-googleplus,
+.logo-twitter,
+.logo-instagram {
+    transition: color 0.2s;
+}
+
+.logo-facebook:hover {
+    color: #3b5998;
+}
+
+.logo-twitter:hover {
+    color: #00aced;
+}
+
+.logo-googleplus:hover {
+    color: #dd4b39;
+}
+
+.logo-instagram:hover {
+    color: #517fa4;
+}
+
+footer .footer-paragrafo {
+    color: #fff;
+    text-align: center;
+    margin-top: 60px;
+    font-size: 1.4rem;
+}
+
+.promo-footer {
+    width: 100vh;
+    min-width: 100%;
+}
+
+@media only screen and (max-width: 800px) and (max-width: 600px){
+    footer {
+        flex-direction: column;
+    }
+    footer p {
+        margin-bottom: 0px;
+        font-size: 1.2rem;
+    }
+}
