--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -46,7 +46,7 @@ header {
 }
 header img{
     width: 200px;
-    
+    object-fit: cover;    
 }
 header nav{
     display: flex;
@@ -188,6 +188,7 @@ h1 {
 .item img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 img {
    padding: 10px;
