--- a/resources/css/promo.css
+++ b/resources/css/promo.css
@@ -128,80 +128,63 @@ header .item-nav{
     }
 }
 
-/* section  Image */
-
-/* figure {
-    width: 100vh;
-    opacity: 80%;
+article {
     display: flex;
     justify-content: center;
-}
-
-figure img{
-    width: 100%;
-    padding-left: 40px;
-    margin-right: 40px;
-}
-
-.background-section {
-    min-width: 100%;
-    margin-top: 300px;
-    flex-direction: column;
     align-items: center;
-}
-
-h1 {
-    color: #000;
-    font-size: 3.6rem;
-    padding-bottom: 20px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.transition{
-    background-color: #000;
-    width: 90%; 
-    height: 300px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-} */
-
-article {
-    width: 100%;
+    flex-direction: column;
 }
 
 article .transition-section{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     
 } 
 
 .transition-section{
-    background-color: aqua;
+    width: 100%;
     min-width: 100vh;
     margin-top: 250px;
-    flex-direction: column;
-    align-items: center;
+    padding-bottom: 20px;
 }
 
 h1 {
     color: #000;
-    font-size: 3.2rem;
+    font-size: 3.4rem;
     margin-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     display: flex;
     justify-content: center;
+}
+
+
+.slider{
+    width: 100%;
+    max-width: 450px;
+    height: 40vw;
+    max-height: 150px;
+    align-self: center;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.slider img{
+    opacity: 0;
+    
+    position: absolute;
+
+    width: 100vh;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    transition: opacity 700ms;
 
 }
 
-.transition{
-    background-image:url('../img/promo/1.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%; 
-    height: 300px;
-    margin-top: 20px;
-    margin-bottom: 30px;
+.slider img.selected {
+    opacity: 1;
 }
 
 section {
@@ -211,15 +194,15 @@ section {
     width: 100vh;
     min-width: 100%;
     height: auto;
-    opacity: 90%;
-    /* margin-bottom: 50px; */
+    opacity: 80%;
+    object-fit: cover;
     display:  flex;
     flex-direction: column;
 }
 
 h2{
     width: 100%;
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     color: #fff;
     margin-top: 20px;
     padding-bottom: 30px;
@@ -227,33 +210,44 @@ h2{
     justify-content: center;
 }
 
+.burguer {
+    width: 35vh;
+    min-width: 200px;
+    max-width: 800px;
+    display: flex;
+    margin: 0 auto;
+    opacity: none;
+    padding-top: 20px;
+}
+
 .promo-details{
-    font-size: 1.8rem;
-    width: 100%;
-    height: 200px;
+    font-size: 2.2rem;
+    width: 100vh;
+    min-width: 100%;
     background-color: #000;
     color: #fff;
-    opacity: 80%;
+    opacity: 90%;
     margin-bottom: 50px;
 }
 
 .promo-details p{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+    margin: 10px;
+    padding: 0 10px;
 }
 
-@media only screen and (max-width: 800px) and (max-width: 600px) {
+@media only screen and (max-width: 600px) and (max-width: 300px) {
     .promo-details {
-        height: 100px;
+        height: auto;
     }
     
     .promo-details p {
         font-size: 1.2rem;
     }
     .promo-details h2 {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
+    }
+    .burguer {
+        width: 20vh;
     }
 }
 
