--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -148,17 +148,16 @@ section {
 }
 
 .container-img div {
-    font-size: 2.6rem;
+    font-size: 2.4rem;
     color: #fff;
     width: 100%;    
-    height: 15%;
-    min-height: 25%;
-    padding-left: 20px;
-    padding-right: 10px;
-    padding-top: 20px;
-    align-items: center;
+    height: 30%;
+    min-height: 20%;
+    padding: 40px 20px;
     background-color: #000;
-    opacity: 90%
+    opacity: 90%;
+    display: flex;
+    justify-content: space-between;
 }
 @media only screen and (max-width: 1700px) {
     .container-img div{
@@ -170,26 +169,26 @@ section {
 
 @media only screen and (max-width: 1400px) {
     .container-img div{
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         padding-top: 0;
     }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 900px) {
     .container-img div{
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         
     }
 }
 @media only screen and (max-width: 699px) {
     .container-img p{
-        font-size: 1.2rem;
+        font-size: 1.4rem;
     }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     .container-img p{
-        font-size: 1.2rem;
+        font-size: 1.6rem;
     }
 }
 
@@ -199,6 +198,7 @@ section {
 
     }
 }
+
 
 
 /* footer */
@@ -289,22 +289,10 @@ footer .footer-paragrafo {
 
 @media only screen and (max-width: 800px) and (max-width: 600px){
     footer {
-        display: flex;
         flex-direction: column;
-        justify-content: center;
-        
     }
     footer p {
+        margin-bottom: 0px;
         font-size: 1.2rem;
-    }
-
-    footer li{
-        font-size: 1.4rem;
-        
-    }
-
-    footer ul{
-        font-size: 1.2rem;
-        display: flex;
     }
 }
