--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -131,74 +131,37 @@ header .item-nav{
 
 /* container-img */
 section {
-    display: block;
-    padding-top: 10%;
-}
-.container-img {
-    background-image: url("../img/home/meat-burger-tomato-onion-beans-walnuts-side-view\ 1.jpg");
-    background-size: 100% 100%;
-    margin-top: 200px;
-    background-repeat: no-repeat;
-    color: #fff;
     display: flex;
-    width: 100vh;
-    min-width: 100%;
-    height: 100vh;
-    min-height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 250px;
+    margin-bottom: 30px;
 }
 
 .container-img div {
-    font-size: 2.4rem;
-    color: #fff;
+    font-size: 1.8rem;
+    color: #000;
     width: 100%;    
     height: 30%;
-    min-height: 20%;
+    min-height: 30%;
     padding: 40px 20px;
-    background-color: #000;
-    opacity: 90%;
     display: flex;
-    justify-content: space-between;
-}
-@media only screen and (max-width: 1700px) {
-    .container-img div{
-        font-size: 1.6rem;
-        display: block;
-        align-self: center;
-    }
 }
 
-@media only screen and (max-width: 1400px) {
-    .container-img div{
-        font-size: 1.6rem;
-        padding-top: 0;
-    }
+section .section-img{
+    width: 100vh;
+    min-width: 350px;
+    max-width: 1200px;
+    height: 250px;
+    min-height: 300px;
+    max-height: 1200px;
+    max-width: 1200px;
 }
 
-@media only screen and (min-width: 700px) and (max-width: 900px) {
-    .container-img div{
-        font-size: 1.6rem;
-        
-    }
+p{
+    font-size: 1.6rem;
+    min-width: 200px;
 }
-@media only screen and (max-width: 699px) {
-    .container-img p{
-        font-size: 1.4rem;
-    }
-}
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .container-img p{
-        font-size: 1.6rem;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    .container-img p{
-        font-size: 1.2rem;
-
-    }
-}
-
 
 
 /* footer */
@@ -292,7 +255,6 @@ footer .footer-paragrafo {
         flex-direction: column;
     }
     footer p {
-        margin-bottom: 0px;
-        font-size: 1.2rem;
+        font-size: 1.0rem;
     }
 }
