--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -159,7 +159,7 @@ article .transition-section{
 
 h1 {
     color: #000;
-    font-size: 3.4rem;
+    font-size: 3.2rem;
     margin-top: 20px;
     padding-bottom: 20px;
     display: flex;
@@ -170,7 +170,7 @@ h1 {
 .slider{
     width: 100%;
     max-width: 400px;
-    height: 50vh;
+    height: 60vh;
     min-height: 20%;
     max-height: 2000px;
     align-self: center;
@@ -188,7 +188,7 @@ h1 {
     height: 100%;
     object-fit: cover;
 
-    transition: opacity 800ms;
+    transition: opacity 700ms;
 
 }
 
@@ -201,7 +201,7 @@ h1 {
    margin: 0 auto;
    min-width: 100%;
    width: 100vh;
-   padding: 20px 20px;
+   padding: 0px 5px;
 }
 
 
@@ -231,6 +231,7 @@ h1 {
 .pedido {
     float: left;
     color: #000;
+    font-size: 18px;
     font-weight: bold;
     position: relative;
     z-index: 1;
@@ -273,8 +274,8 @@ h2{
 }
 
 .burguer {
-    width: 35vh;
-    min-width: 200px;
+    width: 30vh;
+    min-width: 250px;
     max-width: 800px;
     display: flex;
     margin: 0 auto;
@@ -283,7 +284,7 @@ h2{
 }
 
 .promo-details{
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     width: 100vh;
     min-width: 100%;
     background-color: #000;
