--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -150,17 +150,16 @@ section {
 
 section .section-img{
     width: 100vh;
-    min-width: 350px;
-    max-width: 1200px;
-    height: 250px;
-    min-height: 300px;
-    max-height: 1200px;
-    max-width: 1200px;
+    min-width: 300px;
+    height: 400px;
+    margin: 10px 10px;
+    object-fit: cover;
 }
 
-p{
+.container-p{
     font-size: 1.6rem;
-    min-width: 200px;
+    min-width: 100px;
+    font-style: italic;
 }
 
 
