--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -29,6 +29,45 @@ a:active {
 
 /* Header */
 
+#btn {
+    display: none;
+}
+
+labe[for="btn"]{
+    display: none;
+}
+
+label[for="btn"] {
+    padding: 10px;
+    background-color: #fff;
+    color: #fff;
+    text-align: center;
+    font-size: 1.6rem;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+}
+
+@media (max-width: 789px) {
+    labe[for="btn"]{
+        display: block;
+    }
+    .menu li a {
+        width: 100%;
+        float: none;
+    }
+    .menu li {
+        position: static;
+        overflow: hidden;
+        max-height: 0;
+        transition: all 0.4s;
+    }
+    .menu li a:hover li {
+        height: auto;
+        max-height: 200px;
+    }
+}
+
 header {
     background-color: #000;
     width: 100%;
@@ -168,14 +207,11 @@ h1 {
 
 
 .slider{
-    width: 100%;
-    max-width: 400px;
-    height: 60vh;
-    min-height: 20%;
-    max-height: 2000px;
-    align-self: center;
-    position: relative;
-    margin-bottom: 30px;
+    width: 100vh;
+    max-width: 2000px;
+    height: 80vh;
+    min-height: 200px;
+    position: sticky; 
 }
 
 .slider img{
@@ -244,7 +280,7 @@ h1 {
     position: relative;
     z-index: 1;
     background: #fff;
-    padding-left: 15px;
+    padding-left: 10px;
 }
 
 .descricao {
@@ -258,15 +294,19 @@ h1 {
     position: relative;
     top: -8px;
 }
-
-
+@media only screen and (min-width: 1025px) and (min-width: 1123px){
+    span {
+        font-size: 1.8rem;
+    }
+    
+}
 
 h2{
     width: 100%;
     font-size: 2.2rem;
     color: #fff;
     margin-top: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 35px;
     display: flex;
     justify-content: center;
 }
