--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -48,6 +48,7 @@ header img{
     width: 200px;
     object-fit: cover;    
 }
+
 header nav{
     display: flex;
 }
@@ -206,10 +207,8 @@ figure{
 .items-galeria{
     width: 100vh;
     min-width: 100%;
-    margin-top: 90px;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: center;
+    margin: 50px 50px;
+    display: contents;
     flex-direction: column;
 }
 
