--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -132,21 +132,10 @@ header .item-nav{
 /* container-img */
 section {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-top: 300px;
-    padding-bottom: 200px;
+    flex-direction: column;
+    padding-top: 250px;
     margin-bottom: 30px;
-}
-
-.container-img div {
-    font-size: 1.8rem;
-    color: #000;
-    width: 100%;    
-    height: 30%;
-    min-height: 30%;
-    padding: 20px 10px;
-    display: flex;
 }
 
 
@@ -154,16 +143,52 @@ section .section-img{
     width: 100vh;
     min-width: 300px;
     height: 400px;
-    margin: 10px 10px;
     object-fit: cover;
 }
 
 .container-p{
     font-size: 1.8rem;
     min-width: 100px;
+    margin: 20px 10px;
     font-style: italic;
 }
+@media only screen and (max-width: 842px) and (max-width: 616px){
+    section {
+        flex-direction: column;
+        justify-content: center;
+        align-items: baseline;
+        width: 100vh;
+    }
 
+    .container-img {
+        margin: 0 auto
+    }
+    .container-p {
+        font-size: 1.4rem;
+        margin: 10px 10px;
+        padding-bottom: 10px;
+    }
+    
+}
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    section {
+        flex-direction: column;
+        justify-content: center;
+        align-items: baseline;
+        width: 100vh;
+    }
+
+    .container-img {
+        margin: 0 auto
+    }
+    .container-p {
+        font-size: 1.4rem;
+        margin: 10px 10px;
+        padding-bottom: 10px;
+    }
+    
+}
 
 /* footer */
 footer {
