--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -29,50 +29,11 @@ a:active {
 
 /* Header */
 
-#btn {
-    display: none;
-}
-
-labe[for="btn"]{
-    display: none;
-}
-
-label[for="btn"] {
-    padding: 10px;
-    background-color: #fff;
-    color: #fff;
-    text-align: center;
-    font-size: 1.6rem;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-}
-
-@media (max-width: 789px) {
-    labe[for="btn"]{
-        display: block;
-    }
-    .menu li a {
-        width: 100%;
-        float: none;
-    }
-    .menu li {
-        position: static;
-        overflow: hidden;
-        max-height: 0;
-        transition: all 0.4s;
-    }
-    .menu li a:hover li {
-        height: auto;
-        max-height: 200px;
-    }
-}
-
 header {
     background-color: #000;
     width: 100%;
-    min-width: 100vh;
-    position: absolute;
+    max-width: 1200px;
+    min-width: 306px;
     top:0;
     left: 0;
     display: flex;
@@ -89,12 +50,12 @@ header nav{
 }
 header li a{
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 16px;
     
 }
 
 header li{
-    padding: 30px 10px;
+    margin: 0 40px;
 }
 
 header li:first-child{
@@ -109,93 +70,45 @@ header .menu{
 }
 header .nav-menu{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
 }
 
 header .item-nav{
-    margin: 0 auto;
-    
+    margin: 20px;
 }
 
-nav .nav-menu{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    
-}
-
-@media (max-width: 14300px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     header {
-        flex-direction: column;
-    }
-    header img {
-        margin-bottom: 10px;
-    }
-    header .item-nav{
-        font-size: 1.4rem;
-    }
-}
-@media only screen and (max-width: 1410px) and (max-width: 1255px) {
-    .menu a {
-        font-size: 1.6rem;
-    }
-}
-@media only screen and (max-width: 1250x) and (max-width: 1000px) {
-    .menu a {
-        font-size: 1.4rem;
-    }
-}
-@media only screen and (max-width: 789px) {
-    .menu a {
-        font-size: 1.2rem;
+        flex-direction: row;
+        width: 820px;
+        min-width: 306px;
+        justify-content: start;
+        align-items: baseline;
+       
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-    .menu a {
-        font-size: 1.0rem;
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
     }
 }
 
-@media only screen and (max-width: 767px) {
-    .menu a {
-        font-size: 16px;
-    }
-}
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .menu a {
-        font-size: 12px;
-    }
-}
-@media only screen and (max-width: 479px) {
-    .menu a {
-        font-size: 7px;
+@media only screen and (max-width: 521px) and (max-width: 306px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
     }
 }
 
 article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    align-self: start;
+    padding-left: 2%;
 }
-
-article .transition-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-} 
-
-.transition-section{
-    width: 100%;
-    min-width: 100vh;
-    margin-top: 250px;
-    padding-bottom: 20px;
-}
-
 h1 {
     color: #000;
     font-size: 3.2rem;
@@ -205,13 +118,41 @@ h1 {
     justify-content: center;
 }
 
+section{
+    width: 700px;
+    min-width: 306px;
+    max-width: 1200px;
+    float: right;
+    padding-right: 1%;
+    height: 0px;
+}
+
+.container{
+    width: 100%;
+    min-width: 306px;
+    max-width: 1200px;
+}
+
+.cardapio{
+    margin-top: 100px;
+    display: block;
+    height: 750px
+}
+
+
+.title{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    width: auto;
+}
+
 
 .slider{
-    width: 100vh;
-    max-width: 2000px;
-    height: 80vh;
-    min-height: 200px;
-    position: sticky; 
+    width: 1200px;
+    max-width: 400px;
+    min-height: 350px;
+    position: sticky;
 }
 
 .slider img{
@@ -219,7 +160,7 @@ h1 {
     
     position: absolute;
 
-    width: 100vh;
+    width: 800px;
     max-width: 100%;
     height: 100%;
     object-fit: cover;
@@ -233,15 +174,13 @@ h1 {
 }
 
 .home-menu {
-   min-width: 100%;
-   width: 100vh;
-   padding: 20px;
-   margin-bottom: 10px;
+    display: flex;
+    align-items: flex-end;
 }
 
 
 .home-menu ul {
-    padding: 0;
+    padding-right: 1%;
     list-style-type: none;
 }
 
@@ -270,7 +209,7 @@ h1 {
     position: relative;
     z-index: 1;
     background: #fff;
-    padding-right: 15px;
+    padding-right: 10px;
 }
 
 .valor {
@@ -294,31 +233,52 @@ h1 {
     position: relative;
     top: -8px;
 }
-@media only screen and (min-width: 1025px) and (min-width: 1123px){
-    span {
-        font-size: 1.8rem;
+
+@media only screen and (max-width: 1125px) and (max-width: 1200px){
+    article {
+        margin-bottom: 20px;
+    }
+    .home-menu {
+        flex-direction: column;
+        align-items: center;
+        margin: 10px 10px;
+        padding-top: 100px;
+    }
+
+    .cardapio{
+        width: auto;
     }
     
 }
 
-h2{
-    width: 100%;
-    font-size: 2.2rem;
-    color: #fff;
-    margin-top: 20px;
-    padding-bottom: 35px;
-    display: flex;
-    justify-content: center;
+@media only screen and (max-width: 1133px) and (max-width: 918px){
+    article {
+        display: flex;
+        justify-content: center;
+        width: auto;
+        margin-bottom: 20px;
+    }
+    .home-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cardapio{
+        width: 800px;
+    }
+    
 }
 
+
 /* footer */
+
 footer {
     background-color: #000;
     padding: 20px;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 40px;
-    font-size: 2.2rem;
+    font-size: 26px;
 }
 
 .footer-nav {
@@ -335,7 +295,6 @@ footer {
 .social-links li {
     display: inline-block;
     margin-right: 20px;
-    font-size: 1.8rem;
 }
 
 .footer-nav li:last-child,
@@ -360,7 +319,7 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 2.0rem;
+    font-size: 24px;
 }
 
 .logo-facebook,
@@ -390,19 +349,31 @@ footer .footer-paragrafo {
     color: #fff;
     text-align: center;
     margin-top: 60px;
-    font-size: 1.4rem;
+    font-size: 16px;
 }
 
 .promo-footer {
-    width: 100vh;
-    min-width: 100%;
+    max-width: 1200px;
+    min-width: 360px;
+    margin-top: 350px;
 }
 
-@media only screen and (max-width: 800px) and (max-width: 600px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     footer {
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        width: 820px;
     }
-    footer p {
-        font-size: 1.0rem;
+}
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    footer {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        margin-top: 100px;
+        width: 820px;
+        min-width: 306px;
     }
 }
