--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -5,15 +5,10 @@
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
-body{
-    display: grid;
-    place-items: center;
-}
+
 nav, ul{
     list-style: none;
 }
-
-
 
 a {
     text-decoration: none;
@@ -24,6 +19,7 @@ a {
     padding: 2px 6px;
 }
 
+
 a:hover,
 a:active {
     opacity: 1;
@@ -31,12 +27,19 @@ a:active {
     border-bottom: 4px solid #8257E6; 
 }
 
+.container{
+    width: 100%;
+    min-width: 306px;
+    max-width: 1200px;
+}
+
 /* Header */
+
 header {
     background-color: #000;
     width: 100%;
-    min-width: 100vh;
-    position: absolute;
+    max-width: 1200px;
+    min-width: 306px;
     top:0;
     left: 0;
     display: flex;
@@ -46,21 +49,19 @@ header {
 }
 header img{
     width: 200px;
-    object-fit: cover;    
+    
 }
-
 header nav{
     display: flex;
 }
 header li a{
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 16px;
     
 }
 
 header li{
-    margin: 0;
-    
+    margin: 0 40px;
 }
 
 header li:first-child{
@@ -83,64 +84,40 @@ header .item-nav{
     margin: 20px;
 }
 
-@media (max-width: 14300px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     header {
-        flex-direction: column;
-    }
-    header img {
-        margin-bottom: 10px;
-    }
-    header .item-nav{
-        font-size: 1.8px;
-    }
-}
-@media only screen and (max-width: 1410px) and (max-width: 1255px) {
-    .menu a {
-        font-size: 18px;
-    }
-}
-@media only screen and (max-width: 1250x) and (max-width: 1000px) {
-    .menu a {
-        font-size: 16px;
-    }
-    header li{
-        justify-content: space-around;
-    }
-}
-@media only screen and (max-width: 846px) and (max-width: 508px){
-    .menu a {
-        font-size: 14px;
+        flex-direction: row;
+        width: 900px;
+        min-width: 306px;
+        justify-content: start;
+        align-items: baseline;
+       
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-    .menu a {
-        font-size: 14px;
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
     }
 }
 
-@media only screen and (max-width: 767px) {
-    .menu a {
-        font-size: 12px;
-    }
-}
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .menu a {
-        font-size: 12px;
-    }
-}
-@media only screen and (max-width: 479px) {
-    .menu a {
-        font-size: 7px;
+@media only screen and (max-width: 521px) and (max-width: 306px){
+    header {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
     }
 }
 
 
 /* Selection items-wrapper */
 section{
-    max-width: 100%;
-    margin-top: 250px;
+    width: 800px;
+    max-width: 1200px;
+    margin: 80px auto;
+    min-width: 360px;
     
 }
 
@@ -153,17 +130,16 @@ section .tems-img{
 
 h1 {
     color: #000;
-    font-size: 3.2rem;
+    font-size: 60px;
     text-align: center;
+    margin-bottom: 30px;
 }
  
 
 #items {
     display: flex;
+    width: 900px;
     margin: 0 auto;
-    margin: 0 auto;
-    width: 80%;
-    min-height: 100%;
     overflow-x: auto; 
     align-content: space-around;
     scroll-snap-type: x mandatory; 
@@ -201,47 +177,48 @@ figure{
 /* Galeria  */
 
 .items-galeria{
-    width: 100vh;
-    min-width: 100%;
-    margin: 50px 50px;
-    display: contents;
-    flex-direction: column;
+    display: block;
 }
 
 .items-show{
-    width: 100%;
-    max-width: 100%;
+    width: 800px;
+    min-width: 360px;
+    max-width: 1200px;
+    padding-left: 3%;
     
 }
 
 .items-show li {
     display: inline-block;
-    width: 22%;
+    width: 23%;
 }
 
 .images{
-    width: 100%;
-    max-width: 100%;
+    padding: 20px;
+    width: 800px;
+    max-width: 250px;
 }
 
 .images img{
-    width: 100%;
-    max-width: 90%;
-    display: flex;
-    flex-wrap: wrap;
-    height: auto;
-    margin-left: 100px;
+    width: 800px;
+    max-width: 200px;
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 521px) and (max-width: 306px){
+    section {
+       margin: 0 auto;
+    }
 }
 
 /* footer */
-
 footer {
     background-color: #000;
     padding: 20px;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 40px;
-    font-size: 2.4rem;
+    font-size: 26px;
 }
 
 .footer-nav {
@@ -282,7 +259,7 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 2.0rem;
+    font-size: 24px;
 }
 
 .logo-facebook,
@@ -308,21 +285,33 @@ footer {
     color: #517fa4;
 }
 
-footer p {
+footer .footer-paragrafo {
     color: #fff;
     text-align: center;
     margin-top: 60px;
-    font-size: 1.4rem;
+    font-size: 16px;
 }
 
 .promo-footer {
-    width: 100vh;
-    min-width: 100%;
+    width: 900px;
+    max-width: 1200px;
+    min-width: 360px;
 }
 
-@media only screen and (max-width: 800px) and (max-width: 600px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     footer {
-        flex-direction: column;
-        font-size: 1.2rem;
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        width: 820px;
+    }
+}
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    footer {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        margin-top: 100px;
     }
 }
