--- a/resources/css/franqueado.css
+++ b/resources/css/franqueado.css
@@ -160,25 +160,25 @@ nav .nav-menu {
 
 @media only screen and (max-width: 1410px) and (max-width: 1255px) {
     .menu a {
-        font-size: 1.6rem;
+        font-size: 18px;
     }
 }
 
 @media only screen and (max-width: 1250x) and (max-width: 1000px) {
     .menu a {
-        font-size: 1.4rem;
+        font-size: 16px;
     }
 }
 
 @media only screen and (max-width: 789px) {
     .menu a {
-        font-size: 1.2rem;
+        font-size: 16px;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
     .menu a {
-        font-size: 1.0rem;
+        font-size: 12px;
     }
 }
 
