--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -379,9 +379,9 @@ footer .footer-paragrafo {
 }
 
 .promo-footer {
-    
-    max-width: 1200px;
+    width: 1220px;
     min-width: 360px;
+    max-width: 1200px;
 }
 
 @media only screen and (max-width: 862px) and (max-width: 1116px){
