--- a/resources/css/delivery.css
+++ b/resources/css/delivery.css
@@ -28,7 +28,6 @@ a:active {
 }
 
 header {
-    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
     position: absolute;
@@ -44,7 +43,7 @@ header {
 .topo {
     background-color: #000;
     height: 200px;
-    width: 820px;
+    width: 850px;
     min-width: 360px;
     max-width: 1200px;
 }
@@ -175,7 +174,7 @@ nav .nav-menu {
 
 @media only screen and (max-width: 789px) {
     .menu a {
-        font-size: 16px;
+        font-size: 22px;
     }
 }
 
@@ -208,9 +207,11 @@ h1 {
     margin-top: 250px;
 }
 .row {
-    max-width: 1140px; 
+    max-width: 1140px;
     width: 100%;
     display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
 }
 
 
@@ -254,10 +255,7 @@ h1 {
     margin-right: 25px;
 }
 
-@media only screen and (max-width: 1125px) and (max-width: 1200px){
-    div {
-        margin-bottom: 20px;
-    }
+@media only screen and (max-width: 720px) and (max-width: 850px){
     .row {
         flex-direction: column;
         align-items: center;
