--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -28,6 +28,7 @@ a:active {
 }
 
 header {
+    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
     position: absolute;
@@ -43,7 +44,7 @@ header {
 .topo {
     background-color: #000;
     height: 200px;
-    width: 820px;
+    width: 100%;
     min-width: 360px;
     max-width: 1200px;
 }
@@ -117,7 +118,7 @@ nav .nav-menu {
     cursor: pointer;
 }
 
-@media (max-width: 870px) {
+@media (max-width: 770px) {
     header .nav-menu {
         width: 100%;
         display: block;
@@ -161,7 +162,7 @@ nav .nav-menu {
     }
 }
 
-@media only screen and (max-width: 1250px) and (max-width: 1000px) {
+@media only screen and (max-width: 1250x) and (max-width: 1000px) {
     .menu a {
         font-size: 16px;
     }
@@ -169,7 +170,7 @@ nav .nav-menu {
 
 @media only screen and (max-width: 789px) {
     .menu a {
-        font-size: 26px;
+        font-size: 22px;
     }
 }
 
@@ -180,53 +181,48 @@ nav .nav-menu {
 }
 
 
-.menu{
-    width: 820px;
-    min-width: 100%;
-}
 
 article {
     align-self: start;
+    width: 100%;
 }
 
 h1 {
     color: #000;
     font-size: 3.2rem;
-    margin-top: 20px;
+    margin-top: 30px;
     padding-bottom: 20px;
     display: flex;
     justify-content: center;
 }
 
 section{
-    width: 680px;
+    width: 90%;
     float: right;
-    padding-right: 2%;
-    height: 0px;
 }
 
 .container{
-        width: 100%;
+    width: 100%;
     max-width: 1200px;
     min-width: 360px;
 }
 
 .cardapio{
-    display: block;
-    height: 820px;
+    display: flex;
+    padding: 10px;
 }
 
 
 .title{
     display: flex;
     justify-content: center;
-    margin: 20px;
+    padding: 40px;
     width: auto;
 }
 
 
 .slider{
-    width: 1200px;
+    width: 100%;
     max-width: 500px;
     min-height: 450px;
     padding-left: 1%;
@@ -259,7 +255,7 @@ section{
 
 .home-menu ul {
     list-style-type: none;
-    width: 600px;
+    margin-top: 35px;
 }
 
 .home-menu ul:after {
@@ -311,34 +307,96 @@ section{
     position: relative;
     top: -8px;
 }
-
-
-@media only screen and (max-width: 1128px) and (max-width: 1200px){
+@media only screen and (max-width: 1017px) and (max-width: 1100px){
     .home-menu {
-        flex-direction: column;
-        padding-top: 50px;
-        padding-left: 5%;
-        width: 800px;
-    }
-    .home-mun ul{
-        padding-left: 5%;
-
+        display: flex;
+        justify-content: center;
     }
     .slider{
         margin: 0 auto;
-        width: 600px;
+        width: 100%;
     }
 
     .cardapio{
-        width: 820px;
-        margin-top: 250px;
-        margin-bottom: 280px;
-    }
-    ul{
-        margin: 0 auto;
+        display: block;
+        width: 100%;
+        margin-bottom: 400px;
     }
 }
 
+
+@media only screen and (max-width: 817px) and (max-width: 990px){
+    .home-menu {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .slider{
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .cardapio{
+        display: block;
+        width: 100%;
+        margin-bottom: 500px;
+    }
+    .home-menu{
+        height: 500px;
+    }
+    .home-menu li{
+        font-size: 20px;
+        padding: 10px;
+    }
+    .valor{
+        font-size: 18px;
+    }
+    .descricao{
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 682px) and (max-width: 814px){
+    .cardapio{
+        display: block;
+        width: 100%;
+        margin-bottom: 500px;
+    }
+    
+    
+    .home-menu li{
+        font-size: 16px;
+        padding: 10px;
+    }
+    .valor{
+        font-size: 14px;
+    }
+    .descricao{
+        font-size: 12px;
+    }
+}
+@media only screen and (max-width: 368px) and (max-width: 513px){
+    .cardapio{
+        display: block;
+        width: 100%;
+        margin-bottom: 550px;
+        margin-top: 50px;
+    }
+    .home-menu{
+        height: 550px;
+        width: 100%;
+    }
+    .home-menu li{
+        font-size: 18px;
+        padding: 10px;
+    }
+    .valor{
+        font-size: 14px;
+    }
+    .descricao{
+        font-size: 12px;
+    }
+}
 
 
 /* footer */
@@ -424,8 +482,7 @@ footer .footer-paragrafo {
 }
 
 .promo-footer {
-    max-width: 1200px;
-    min-width: 360px;
+    width: 100%;
 }
 
 @media only screen and (max-width: 862px) and (max-width: 1116px){
@@ -433,9 +490,9 @@ footer .footer-paragrafo {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        width: 820px;
+        margin-top: 100px;
+        width: 100%;
     }
-
 }
 
 @media only screen and (max-width: 632px) and (max-width: 416px){
@@ -444,8 +501,6 @@ footer .footer-paragrafo {
         justify-content: start;
         align-items: baseline;
         margin-top: 100px;
-        width: 820px;
-        min-width: 306px;
+        width: 100%;
     }
-    
 }
