--- a/resources/css/delivery.css
+++ b/resources/css/delivery.css
@@ -28,6 +28,7 @@ a:active {
 }
 
 header {
+    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
     position: absolute;
@@ -43,7 +44,7 @@ header {
 .topo {
     background-color: #000;
     height: 200px;
-    width: 850px;
+    width: 100%;
     min-width: 360px;
     max-width: 1200px;
 }
@@ -102,8 +103,6 @@ nav .nav-menu {
     color: #fff;
 }
 
-
-
 #main-menu-checkbox {
     position: absolute;
     /* left: -100vw; */
@@ -130,9 +129,6 @@ nav .nav-menu {
     }
     header li {
         padding: 10px 10px;
-    }
-    .menu{
-        width: 850px;
     }
     .menu a {
         font-size: 20px;
@@ -184,28 +180,29 @@ nav .nav-menu {
     }
 }
 
-.container{
+
+.menu{
     width: 100%;
-    min-width: 306px;
-    max-width: 1200px;
+    min-width: 100%;
 }
 
-
 section {
-    width: 817px;
+    width: 100%;
     min-width: 100%;
     display: grid;
 }
 
 h1 {
     color: #000;
-    font-size: 3.2rem;
+    font-size: 60px;
     text-align: center;
+    margin: 30px 0px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
 
-.section-steps{
-    margin-top: 250px;
-}
+
 .row {
     max-width: 1140px;
     width: 100%;
@@ -224,20 +221,20 @@ h1 {
     text-align: start;
     width: 100%;
     padding-left: 4%;
-    margin-top: 100px;
+    margin-top: 150px;
+    font-size: 22px;
+}
+
+p{
     font-size: 28px;
 }
 
 .app-screen {
-    width: 40vh; 
+    width: 50vh; 
 }
 
 .step {
     margin-bottom: 50px;
-}
-
-.step:last-of-type {
-    margin-bottom: 80px;
 }
 
 
@@ -256,16 +253,26 @@ h1 {
 }
 
 @media only screen and (max-width: 720px) and (max-width: 850px){
+    h1{
+        font-size: 48px;
+    }
+    p{
+        font-size: 20px;
+    }
     .row {
         flex-direction: column;
         align-items: center;
-        padding-top: 60px;
+    }
+    .app-screen{
+        width: 30vh;
+    }
+    .steps-box:last-child{
+        margin-top: 30px;
     }
     
 }
 
 /* footer */
-
 footer {
     background-color: #000;
     padding: 20px;
@@ -347,9 +354,6 @@ footer .footer-paragrafo {
 }
 
 .promo-footer {
-    max-width: 1200px;
-    min-width: 360px;
-    margin-top: 30px;
     width: 100%;
 }
 
@@ -358,10 +362,7 @@ footer .footer-paragrafo {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        width: 820px;
-    }
-    .promo-footer{
-        width: 850px;
+        width: 100%;
     }
 }
 
@@ -370,9 +371,7 @@ footer .footer-paragrafo {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        margin-top: 100px;
-        width: 820px;
-        min-width: 306px;
+        width: 100%;
     }
 }
 
