--- a/resources/css/galeria.css
+++ b/resources/css/galeria.css
@@ -44,12 +44,10 @@ header {
 .topo {
     background-color: #000;
     height: 200px;
-    width: 1200px;
+    width: 100%;
     min-width: 360px;
     max-width: 1200px;
 }
-
-
 
 header img {
     width: 200px;
@@ -184,25 +182,17 @@ nav .nav-menu {
 
 
 .menu{
-    width: 1220px;
-    min-width: 360px;
-    max-width: 1200px
+    width: 100%;
+    min-width: 100%;
 }
-
 
 /* Selection items-wrapper */
-section{
-    margin-top: 250px;
-    top: 200px;
-    width: 820px;
-    
-}
 
 .container-sections{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 1200px;
+    width: 100%;
     align-items: center;
 }
 
@@ -218,13 +208,16 @@ h1 {
     color: #000;
     font-size: 60px;
     text-align: center;
-    margin-bottom: 30px;
+    margin: 30px 30px;
 }
- 
+
+#items-wrapper{
+    margin: 0 auto;
+}
 
 #items {
     display: flex;
-    width: 900px;
+    width: 100%;
     margin: 0 auto;
     overflow-x: auto; 
     align-content: space-around;
@@ -244,6 +237,7 @@ h1 {
     scroll-snap-align: start;
     pointer-events: none;
 }
+
 .item img{
     width: 100%;
     height: 100%;
@@ -263,38 +257,52 @@ figure{
 /* Galeria  */
 
 .items-galeria{
-    display: block;
+    margin: 0 auto;
 }
 
 .items-show{
-    width: 800px;
-    min-width: 360px;
-    max-width: 1200px;
-    padding-left: 3%;
-    
+    display: grid;
+    grid-template-columns: 2fr 300px;
+    max-width: 800px;
+    padding: 10px;
+    margin: 0 auto; 
 }
 
 .items-show li {
     display: inline-block;
-    width: 23%;
+    width: 30%;
 }
 
 .images{
     padding: 20px;
-    width: 800px;
-    max-width: 250px;
+    width: 100%;
+    max-width: 800px;
+    min-width: 360px;
 }
 
 .images img{
-    width: 800px;
-    max-width: 200px;
+    width: 100%;
+    max-width: 300px;
     margin: 0 auto;
 }
-
-@media only screen and (max-width: 521px) and (max-width: 306px){
-    section {
-       margin: 0 auto;
+@media only screen and (max-width: 762px) and (max-width: 856px){
+    .items-galeria{
+        grid-template-columns: 1fr;
     }
+    .items-show{
+        grid-template-columns: 1fr;
+    }
+
+}
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    .items-galeria{
+        grid-template-columns: 1fr;
+    }
+    .items-show{
+        grid-template-columns: 1fr;
+    }
+
 }
 
 /* footer */
@@ -379,9 +387,7 @@ footer .footer-paragrafo {
 }
 
 .promo-footer {
-    width: 1220px;
-    min-width: 360px;
-    max-width: 1200px;
+    width: 100%;
 }
 
 @media only screen and (max-width: 862px) and (max-width: 1116px){
@@ -389,6 +395,8 @@ footer .footer-paragrafo {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
+        margin-top: 100px;
+        width: 100%;
     }
 }
 
@@ -398,6 +406,6 @@ footer .footer-paragrafo {
         justify-content: start;
         align-items: baseline;
         margin-top: 100px;
-        width: 1200px;
+        width: 100%;
     }
 }
