--- a/resources/css/promo.css
+++ b/resources/css/promo.css
@@ -44,7 +44,7 @@ header {
 .topo {
     background-color: #000;
     height: 200px;
-    width: 820px;
+    width: 100%;
     min-width: 360px;
     max-width: 1200px;
 }
@@ -119,14 +119,12 @@ nav .nav-menu {
 }
 
 @media (max-width: 770px) {
-    .topo{
-        display: none;
-    }
     header .nav-menu {
         width: 100%;
         display: block;
     }
     header {
+        background-color: rgba(0, 0, 0, 0.7);
         width: 100%;
     }
     header li {
@@ -184,7 +182,7 @@ nav .nav-menu {
 
 
 .menu{
-    width: 820px;
+    width: 100%;
     min-width: 100%;
 }
 
@@ -192,19 +190,21 @@ h1 {
     color: #000;
     font-size: 60px;
     text-align: center;
-    margin: 20px 10px;
+    margin: 30px 0px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
 
 .container-promo{
     width: 100%;
-    margin-top: 250px;
 }
 
  
 .slider-exemplo {
-    width: 800px ;
+    width: 100%;
     min-width: 360px;
-    max-width: 1200px;
+    max-width: 800px;
     align-self: center;
 } 
 
@@ -218,9 +218,9 @@ h1 {
 }
 
 .promocoes{
-    width: 800px ;
+    width: 100%;
     min-width: 360px;
-    max-width: 1200px;
+    max-width: 800px;
     padding: 1%;
 }
 
@@ -248,12 +248,15 @@ h1 {
 }
 @media only screen and (max-width: 1115px) and (max-width: 1026px){
     .title-promo{
-        width: 800px;
+        width: 100%;
+        text-align: center;
+        margin-top: 120px;
     }
     .promo {
         flex-direction: column;
         justify-content: start;
         align-items: baseline;
+        margin-top: 83px;
     }
     .promocoes{
         margin: 0 auto;
@@ -262,7 +265,7 @@ h1 {
     }
     .slider-exemplo{
         margin: 0 auto;
-        width: 800px;
+        width: 100%;
     }
     .promo-description{
         font-size: 20px;
@@ -270,7 +273,6 @@ h1 {
 
 }
 
-/* footer */
 footer {
     background-color: #000;
     padding: 20px;
@@ -353,8 +355,6 @@ footer .footer-paragrafo {
 
 .promo-footer {
     width: 100%;
-    max-width: 1100px;
-    min-width: 360px;
 }
 
 @media only screen and (max-width: 862px) and (max-width: 1116px){
@@ -362,7 +362,7 @@ footer .footer-paragrafo {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        width: 820px;
+        width: 100%;
     }
 }
 
@@ -371,6 +371,6 @@ footer .footer-paragrafo {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        width: 820px;
+        width: 100%;
     }
 }
