--- a/resources/css/reservas.css
+++ b/resources/css/reservas.css
@@ -28,6 +28,7 @@ a:active {
 }
 
 header {
+    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
     position: absolute;
@@ -43,7 +44,7 @@ header {
 .topo {
     background-color: #000;
     height: 200px;
-    width: 820px;
+    width: 100%;
     min-width: 360px;
     max-width: 1200px;
 }
@@ -124,7 +125,7 @@ nav .nav-menu {
     }
     header {
         background-color: rgba(0, 0, 0, 0.7);
-        width: 850px;
+        width: 100%;
     }
     header li {
         padding: 10px 10px;
@@ -178,9 +179,11 @@ nav .nav-menu {
         font-size: 14px;
     }
 }
-.container-promo{
+
+
+.menu{
     width: 100%;
-    margin-top: 250px;
+    min-width: 100%;
 }
 
 h1 {
@@ -243,7 +246,8 @@ section {
     background-repeat: no-repeat;
     color: #fff; 
     background-attachment: fixed;
-    height: 750px;
+    width: 100%;
+    height: 800px;
 }
 .descripition{
     word-spacing: 6px;
@@ -276,7 +280,7 @@ blockquote {
 
 blockquote::before {
     content: "\201C";
-    font-size: 400%;
+    font-size: 300%;
 
 }
 
@@ -323,7 +327,10 @@ cite img {
     }
     section{
         padding: 40px 0;
-        min-width: 860px;
+        min-width: 100%;
+    }
+    .descripition{
+        font-size: 16px;
     }
 
     .row,
@@ -345,8 +352,8 @@ cite img {
 }
 @media only screen and (max-width: 550px){
     .section-testimonials{
-        width: 850px;
-        height: 650px;
+        width: 100%;
+        height: 850px;
     }
     .col{
         width: 100%;
@@ -360,7 +367,7 @@ cite img {
 /* Formulário section */
 
 .wrapper{
-    width: 860px;
+    width: 100%;
     background-color: #fff;
     margin: 20px auto;
     padding: 30px;
@@ -541,6 +548,7 @@ cite img {
     }
 }
 /* footer */
+/* footer */
 footer {
     background-color: #000;
     padding: 20px;
@@ -623,26 +631,22 @@ footer .footer-paragrafo {
 
 .promo-footer {
     width: 100%;
-    max-width: 1100px;
-    min-width: 360px;
 }
 
-@media only screen and (max-width: 1116px) and (max-width: 862px){
+@media only screen and (max-width: 862px) and (max-width: 1116px){
     footer {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        width: 860px;
-        min-width: 306px;
+        width: 100%;
     }
-}   
+}
 
 @media only screen and (max-width: 632px) and (max-width: 416px){
     footer {
         flex-direction: row;
         justify-content: start;
         align-items: baseline;
-        width: 860px;
-        min-width: 306px;
+        width: 100%;
     }
 }
